--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-lg-10 mx-auto">
           <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
           <p class="lead mb-5">Ensure that your clients can see all of your amazing work with ease!
-            <a href="https://www.fai.marketing">FAI Marketing Inc.</a>!</p>
+            <a href="https://www.loveswebfirm.com">Love's Web Firm</a>!</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
         </div>
       </div>
@@ -134,7 +134,7 @@
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
         next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://www.fai.marketing">Get It Now!</a>
+      <a class="btn btn-primary btn-xl" href="https://www.loveswebfirm.com">Get It Now!</a>
     </div>
   </section>
 
@@ -232,7 +232,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; FAI Marketing Inc. 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; Love's Web Firm 2020</p>
     </div>
   </footer>
 
